--- a/index.html
+++ b/index.html
@@ -57,15 +57,36 @@
 
   <!-- Page Content -->
   <div class="container-fluid">
-    <div class="row ">
+    <div class="row">
       <div class="col-lg-12 tab tab0 text-left">
-        <div class="tab0-content col-lg-6 col-md-9 col-sm-6 col-xs-8">
-          <h1>Wat is de invloed van wolven op de natuur?</h1>
-          <button class="btn btn-primary" onclick="pageScroll(NaN, true);">Scroll down</button>
+        <div class="tab0-content col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div class="col-lg-6" style="background-color:black;">
+            <h1>Wat is de invloed van wolven op de natuur?</h1>
+            <p>Ons profielwerkstuk gaat over de wolf. Maar niet alleen wat de wolf is, maar ook wat hij doet, hoe hij het doet en wat de gevolgen zijn op de natuur om ons heen. De wolf is namelijk niet zo simpel als de meesten denken. Het is een erg complex
+              dier en er spelen veel achterliggende factoren bij het zijn van een wolf. Daarbij zorgt hij voor grote gevolgen in ecosystemen waar de wolf aanwezig is, maar wat be&iuml;nvloed de wolf nou allemaal precies door simpelweg z&rsquo;n dagelijks
+              leven te lijden? Deze hoofdvraag splitsen we op in de geografische en ecologische veranderingen. Om dit te kunnen beantwoorden gaan we eerst na hoe de wolf nou in elkaar zit en hoe hij elke dag leeft als apex predator in zijn roedel zonder
+              dat iemand hem na kan doen.</p>
+
+            <p>We gebruiken hier het Yellowstone National Park als ons test arena, waar op deze dag de wolf nog steeds veel wordt onderzocht, hier kunnen we goed zien wat voor effect de wolf nou precies heeft op het park, de planten, de mens en de vele andere
+              soorten die daar leven in het geval dat hij opnieuw geherintroduceerd wordt. </p>
+            <button class="btn btn-primary" onclick="pageScroll(NaN, true);">Scroll down</button>
+          </div>
+          <div class="col-lg-6" style="background-color:black;">
+            <h1>Wat is de invloed van wolven op de natuur?</h1>
+            <p>Ons profielwerkstuk gaat over de wolf. Maar niet alleen wat de wolf is, maar ook wat hij doet, hoe hij het doet en wat de gevolgen zijn op de natuur om ons heen. De wolf is namelijk niet zo simpel als de meesten denken. Het is een erg complex
+              dier en er spelen veel achterliggende factoren bij het zijn van een wolf. Daarbij zorgt hij voor grote gevolgen in ecosystemen waar de wolf aanwezig is, maar wat be&iuml;nvloed de wolf nou allemaal precies door simpelweg z&rsquo;n dagelijks
+              leven te lijden? Deze hoofdvraag splitsen we op in de geografische en ecologische veranderingen. Om dit te kunnen beantwoorden gaan we eerst na hoe de wolf nou in elkaar zit en hoe hij elke dag leeft als apex predator in zijn roedel zonder
+              dat iemand hem na kan doen.</p>
+
+            <p>We gebruiken hier het Yellowstone National Park als ons test arena, waar op deze dag de wolf nog steeds veel wordt onderzocht, hier kunnen we goed zien wat voor effect de wolf nou precies heeft op het park, de planten, de mens en de vele andere
+              soorten die daar leven in het geval dat hij opnieuw geherintroduceerd wordt. </p>
+            <button class="btn btn-primary" onclick="pageScroll(NaN, true);">Scroll down</button>
+          </div>
+
         </div>
       </div>
       <div class="col-lg-12 tab tab1 text-left">
-        <div class="tab1-content">
+        <div class="tab1-content col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <h1>Fancy h1 text</h1>
           <button class="btn btn-primary" onclick="pageScroll(NaN, true);">Scroll down</button>
           <button class="btn btn-primary" onclick="pageScroll(NaN, false);">Scroll up</button>
