--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
 <body>
   <!-- Welcome overlay, only shows when page is loaded -->
-  <div class="overlay">
+  <!-- <div class="overlay">
     <div class="overlay-content">
       <a><img class="logo" src="vendor/images/logo.png" /></a>
       <button class="btn btn-primary" onclick="continueSite();">Lees verder</button>
     </div>
-  </div>
+  </div> -->
 
   <!-- Universal background. scales for all screens -->
-  <img class="background" src="vendor/images/background.jpg" />
+  <!-- <img class="background" src="vendor/images/background.jpg" /> -->
 
   <!-- Main navigationbar -->
   <nav class="navbar fixed-top navbar-dark navbar-custom">
@@ -56,59 +56,37 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container-fluid">
+
+  <div class="container page0">
     <div class="row">
-      <div class="col-lg-12 tab tab0 text-left">
-        <div class="tab0-content col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <div class="col-lg-6" style="background-color:black;">
-            <h1>Wat is de invloed van wolven op de natuur?</h1>
-            <p>Ons profielwerkstuk gaat over de wolf. Maar niet alleen wat de wolf is, maar ook wat hij doet, hoe hij het doet en wat de gevolgen zijn op de natuur om ons heen. De wolf is namelijk niet zo simpel als de meesten denken. Het is een erg complex
-              dier en er spelen veel achterliggende factoren bij het zijn van een wolf. Daarbij zorgt hij voor grote gevolgen in ecosystemen waar de wolf aanwezig is, maar wat be&iuml;nvloed de wolf nou allemaal precies door simpelweg z&rsquo;n dagelijks
-              leven te lijden? Deze hoofdvraag splitsen we op in de geografische en ecologische veranderingen. Om dit te kunnen beantwoorden gaan we eerst na hoe de wolf nou in elkaar zit en hoe hij elke dag leeft als apex predator in zijn roedel zonder
-              dat iemand hem na kan doen.</p>
-
-            <p>We gebruiken hier het Yellowstone National Park als ons test arena, waar op deze dag de wolf nog steeds veel wordt onderzocht, hier kunnen we goed zien wat voor effect de wolf nou precies heeft op het park, de planten, de mens en de vele andere
-              soorten die daar leven in het geval dat hij opnieuw geherintroduceerd wordt. </p>
-            <button class="btn btn-primary" onclick="pageScroll(NaN, true);">Scroll down</button>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Lorem Ipsum</h1>
           </div>
-          <div class="col-lg-6" style="background-color:black;">
-            <h1>Wat is de invloed van wolven op de natuur?</h1>
-            <p>Ons profielwerkstuk gaat over de wolf. Maar niet alleen wat de wolf is, maar ook wat hij doet, hoe hij het doet en wat de gevolgen zijn op de natuur om ons heen. De wolf is namelijk niet zo simpel als de meesten denken. Het is een erg complex
-              dier en er spelen veel achterliggende factoren bij het zijn van een wolf. Daarbij zorgt hij voor grote gevolgen in ecosystemen waar de wolf aanwezig is, maar wat be&iuml;nvloed de wolf nou allemaal precies door simpelweg z&rsquo;n dagelijks
-              leven te lijden? Deze hoofdvraag splitsen we op in de geografische en ecologische veranderingen. Om dit te kunnen beantwoorden gaan we eerst na hoe de wolf nou in elkaar zit en hoe hij elke dag leeft als apex predator in zijn roedel zonder
-              dat iemand hem na kan doen.</p>
-
-            <p>We gebruiken hier het Yellowstone National Park als ons test arena, waar op deze dag de wolf nog steeds veel wordt onderzocht, hier kunnen we goed zien wat voor effect de wolf nou precies heeft op het park, de planten, de mens en de vele andere
-              soorten die daar leven in het geval dat hij opnieuw geherintroduceerd wordt. </p>
-            <button class="btn btn-primary" onclick="pageScroll(NaN, true);">Scroll down</button>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
+            ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
+            Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
+            at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
           </div>
-
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
+            ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
+            Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
+            at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
+          </div>
         </div>
       </div>
-      <div class="col-lg-12 tab tab1 text-left">
-        <div class="tab1-content col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h1>Fancy h1 text</h1>
-          <button class="btn btn-primary" onclick="pageScroll(NaN, true);">Scroll down</button>
-          <button class="btn btn-primary" onclick="pageScroll(NaN, false);">Scroll up</button>
-        </div>
-      </div>
-      <div class="col-lg-12 tab tab2 text-left">
-        <div style="position:absolute;top:50%;color:white;left:10%;">
-          <h1>Nee</h1>
-          <!-- <button class="btn btn-primary" onclick="pageScroll(NaN, true);">Scroll down</button> -->
-          <button class="btn btn-primary" onclick="pageScroll(NaN, false);">Scroll up</button>
-        </div>
-      </div>
-
-      <!-- Bootstrap core JavaScript -->
-      <script src="vendor/jquery/jquery.min.js "></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
-      <script src="vendor/custom/js/custom.js "></script>
-      <script src="https://use.fontawesome.com/8d6338574f.js"></script>
-
     </div>
   </div>
-  <button type="button" class="btn btn-primary btn-circle btn-lg" onclick="pageScroll(0);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+
+  <!-- <button type="button" class="btn btn-primary btn-circle btn-lg" onclick="pageScroll(0);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button> -->
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js "></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.js "></script>
+  <script src="vendor/custom/js/custom.js "></script>
+  <script src="https://use.fontawesome.com/8d6338574f.js"></script>
 </body>
 
 </html>
