--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- <div class="overlay">
     <div class="overlay-content">
       <a><img class="logo" src="vendor/images/logo.png" /></a>
-      <button class="btn btn-primary" onclick="continueSite();">Lees verder</button>
+      <button class="btn btn btn-primary" onclick="continueSite();">Lees verder</button>
     </div>
   </div> -->
 
@@ -62,7 +62,7 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Lorem Ipsum</h1>
+            <h1>Lorem Ipsum0</h1>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
@@ -75,16 +75,66 @@
             ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
             Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
             at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
+            <button class="btn btn-primary" onClick="slide(1, true)">down</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container page1">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Lorem Ipsum1</h1>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
+            ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
+            Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
+            at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
+            ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
+            Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
+            at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
+            <button class="btn btn-primary" onClick="slide(2, true)">down</button>
+            <button class="btn btn-primary" onClick="slide(0, false)">up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container page2">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Lorem Ipsum2</h1>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
+            ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
+            Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
+            at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
+            ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
+            Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
+            at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
+            <button class="btn btn-primary" onClick="slide(1, false)">up</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- <button type="button" class="btn btn-primary btn-circle btn-lg" onclick="pageScroll(0);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button> -->
+  <!-- <button type="button" class="btn btn btn-primary btn-circle btn-lg" onclick="pageScroll(0);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button> -->
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js "></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.js "></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
   <script src="vendor/custom/js/custom.js "></script>
   <script src="https://use.fontawesome.com/8d6338574f.js"></script>
 </body>
