--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
             Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
             at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
-            <button class="btn btn-primary" onClick="movePage(1, true)">down</button>
+            <button class="btn btn-primary" onClick="movePage(NaN, true)">down</button>
           </div>
         </div>
       </div>
@@ -99,8 +99,8 @@
             ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
             Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
             at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
-            <button class="btn btn-primary" onClick="movePage(2, true)">down</button>
-            <button class="btn btn-primary" onClick="movePage(0, false)">up</button>
+            <button class="btn btn-primary" onClick="movePage(NaN, true)">down</button>
+            <button class="btn btn-primary" onClick="movePage(NaN, false)">up</button>
           </div>
         </div>
       </div>
@@ -124,7 +124,7 @@
             ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
             Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
             at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
-            <button class="btn btn-primary" onClick="movePage(1, false)">up</button>
+            <button class="btn btn-primary" onClick="movePage(NaN, false)">up</button>
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
   <button type="button" class="btn btn btn-primary btn-circle btn-lg" onclick="movePage(0, false);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js "></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/custom/js/custom.js "></script>
   <script src="https://use.fontawesome.com/8d6338574f.js"></script>
 </body>
