--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- <img class="background" src="vendor/images/background.jpg" /> -->
 
   <!-- Main navigationbar -->
-  <nav class="navbar fixed-top navbar-dark navbar-custom">
+  <nav class="navbar fixed-top navbar-dark navbar-custom" id="navbar">
     <a class="navbar-brand" href="#">Lupus Inc.</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
         <span class="navbar-toggler-icon"></span>
