--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     <div class="navbar-collapse collapse" id="collapsingNavbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:pageScroll(0);">Home</a>
+          <a class="nav-link" href="javascript:movePage(0, NaN);">Home</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:pageScroll(1);">Tab1</a>
+          <a class="nav-link" href="javascript:movePage(1, NaN);">Tab1</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:pageScroll(2); ">Tab2</a>
+          <a class="nav-link" href="javascript:movePage(2, NaN);">Tab2</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:pageScroll(3);">Tab3</a>
+          <a class="nav-link" href="javascript:movePage(3, NaN);">Tab3</a>
         </li>
       </ul>
     </div>
@@ -69,8 +69,8 @@
             ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
             Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
             at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
-            <button class="btn btn-primary" onClick="movePage(NaN, true)">down</button>
           </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
         </div>
       </div>
     </div>
@@ -80,7 +80,90 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Lorem Ipsum1</h1>
+            <h1>De wolf</h1>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+            <p>Wat is een wolf nou eigenlijk? Dat lijkt misschien een simpele vraag met een nog simpeler antwoord. Toch, als je er even over nadenkt, kom je tot de conclusie dat het een stuk lastigere kwestie is dan je eerder had ingeschat. De wolf ook wel
+              Canis lupus genoemd, komt van de familie hondachtigen (Canidae), die weer behoort tot de orde van de roofdieren (Carnivora). Maar waar hoort de wolf nog meer bij, hoe is de wolf &lsquo;de wolf&rsquo; geworden zoals we die kennen en wat maakt
+              deze hondachtige zo speciaal? Dat gaan wij nu beantwoorden in de volgende kopjes.</p>
+            <P STYLE="margin-bottom: 0in">Voordat we in een aantal leuke weetjes van de wolf duiken, vertel ik eerst wat over de taxonomie van de wolf, oftewel waar de wolf in de biologie wordt ingedeeld.</P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <UL>
+              <LI>
+                <P STYLE="margin-bottom: 0in">Domein: Eukaryoten.</P>
+            </UL>
+            <P STYLE="margin-bottom: 0in">De wolf behoort tot de eukaryoten, wat betekent dat het dier cellen heeft met daarin organellen en een celkern die de chromosomen bij elkaar houdt. Eukaryoten kunnen zowel ééncellig als meercellig zijn. De wolf is uiteraard een meercellig
+              organisme. Naast een celkern heeft de wolf in zijn cellen ook andere organellen, waaronder: mitochondriën, ribosomen en een golgi-systeem.
+            </P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <UL>
+              <LI>
+                <P STYLE="margin-bottom: 0in">Rijk: Dieren (de wetenschappelijke naam is Animalia).</P>
+            </UL>
+            <P STYLE="margin-bottom: 0in">De wolf behoort tot het dierenrijk, oftewel Animalia. Dit betekent dat de cellen van het dier geen celwand, geen bladgroenkorrels, maar wel een celkern bevatten.</P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <UL>
+              <LI>
+                <P STYLE="margin-bottom: 0in">Stam: Chordadieren (de wetenschappelijke naam is Chordata).</P>
+            </UL>
+            <P STYLE="margin-bottom: 0in">De wolf behoort tot de Chordadieren. Dat zijn dieren die aanleg van een Chorda hebben. Dit is een elastische, flexibele streng die langs de complete rug van het dier loopt. Dit is nog geen ruggengraat, maar wanneer het dier ook een gewervelde
+              is, wat de wolf is, ontwikkeld het dier in latere ontwikkelingsstadia ruggenwervels.</P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <UL>
+              <LI>
+                <P STYLE="margin-bottom: 0in">Klasse: Zoogdieren (de wetenschappelijke naam is Mammalia).</P>
+            </UL>
+            <P STYLE="margin-bottom: 0in">De wolf behoort tot de zoogdieren. Dit zijn warmbloedige dieren die hun nakomelingen levend baren en zoals de naam al verklapt, zoogt de moeder haar nakomelingen met een soort melk.
+            </P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <UL>
+              <LI>
+                <P STYLE="margin-bottom: 0in">Orde: Roofdieren (de wetenschappelijke naam is Carnivora).</P>
+            </UL>
+            <P STYLE="margin-bottom: 0in">De wolf behoort tot de roofdieren. Dit betekent dat het dier exclusief vlees eet. De wolf eet dus onder normale omstandigheden alleen vlees.</P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <UL>
+              <LI>
+                <P STYLE="margin-bottom: 0in">Familie: Hondachtigen (de wetenschappelijke naam is Canidae).</P>
+            </UL>
+            <P STYLE="margin-bottom: 0in">De wolf behoort tot de hondachtigen. Dat betekent dat het dier vier poten heeft met aan de voorkant 5 nagels per poot en aan de achterkant 4 nagels per poot. De nagels zijn niet intrekbaar zoals bij de katachtigen.</P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <UL>
+              <LI>
+                <P STYLE="margin-bottom: 0in">Geslacht: Canis</P>
+            </UL>
+            <P STYLE="margin-bottom: 0in">De wolf zijn geslacht is Canis. Dat betekent dat hij onder een groep valt van verschillende hondachtigen, waaronder: de jakhalzen, de coyote, de hond en de wolf.</P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <UL>
+              <LI>
+                <P STYLE="margin-bottom: 0in">Soort: Lupus</P>
+            </UL>
+            <P STYLE="margin-bottom: 0in">Zijn soort is lupus, ofwel de wolf.</P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
+            <P STYLE="margin-bottom: 0in">
+              <BR>
+            </P>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
@@ -88,14 +171,7 @@
             Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
             at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
-            ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
-            Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
-            at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
-            <button class="btn btn-primary" onClick="movePage(NaN, true)">down</button>
-            <button class="btn btn-primary" onClick="movePage(NaN, false)">up</button>
-          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
         </div>
       </div>
     </div>
@@ -118,22 +194,24 @@
             ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
             Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
             at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
-            <button class="btn btn-primary" onClick="movePage(NaN, false)">up</button>
           </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"> </div>
         </div>
       </div>
     </div>
   </div>
-  <button type="button" class="btn btn btn-primary btn-circle btn-lg" onclick="movePage(0, false);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+  <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-up" onclick="movePage(NaN, false);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+  <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-down" onclick="movePage(NaN, true);"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
+
   <!-- CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="vendor/custom/css/custom.css" rel="stylesheet">
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js "></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendor/custom/js/custom.js "></script>
-  <script src="https://use.fontawesome.com/8d6338574f.js"></script>
+  <script async src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script async src="vendor/custom/js/custom.js "></script>
+  <script async src="https://use.fontawesome.com/8d6338574f.js"></script>
 </body>
 
 </html>
