--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <div class="container page0">
     <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height0">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
             <h1>Lorem Ipsum0</h1>
@@ -77,7 +77,7 @@
   </div>
   <div class="container page1">
     <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height1">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
             <h1>De wolf</h1>
@@ -177,10 +177,10 @@
     </div>
   </div>
   <div class="container page2">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock">
+    <div class="row ">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height2">
         <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content ">
             <h1>Lorem Ipsum2</h1>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
