--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
             <h1>Lorem Ipsum0</h1>
           </div>
           <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container page1">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height1">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Lorem Ipsum1</h1>
+          </div>
+          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
             <p>
               Wat is een wolf nou eigenlijk? Dat lijkt misschien een simpele vraag met een nog simpeler antwoord. Toch, als je er even over nadenkt, kom je tot de conclusie dat het een stuk lastigere kwestie is dan je eerder had ingeschat. De wolf ook wel Canis lupus
               genoemd, komt van de familie hondachtigen (Canidae), die weer behoort tot de orde van de roofdieren (Carnivora). Maar waar hoort de wolf nog meer bij, hoe is de wolf &lsquo;de wolf&rsquo; geworden zoals we die kennen en wat maakt deze hondachtige
@@ -160,41 +176,43 @@
     </div>
   </div>
 
-  <div class="container page1">
+  <div class="container page2">
     <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height1">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height2">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Lorem Ipsum1</h1>
+            <h1>Gesciedenis en herkomst</h1>
           </div>
           <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus
-            ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo.
-            Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci
-            at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit.
-            Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra
-            nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo. Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus
-            ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor
-            tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque
-            ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo. Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc
-            sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor
-            neque lectus ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu
-            ultricies leo. Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras
-            cursus orci at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit
-            suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus
-            viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo. Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse
-            maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie
-            nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat
-            leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo. Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum
-            nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor
-            neque lectus ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu
-            ultricies leo. Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras
-            cursus orci at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie nibh tempor tellus malesuada, vitae consectetur diam euismod. Duis egestas suscipit
-            suscipit. Nulla interdum, quam in lacinia maximus, enim est laoreet magna, a tempor neque lectus ut nisi. Vivamus quis urna mollis, gravida nulla vel, consequat leo. Quisque ut bibendum libero. Sed in velit in enim vulputate pharetra. Phasellus
-            viverra nunc interdum tellus venenatis, id molestie orci bibendum. Maecenas eu ultricies leo. Nam a gravida est, in cursus massa. Aliquam erat volutpat. Vestibulum nunc sem, consectetur id imperdiet non, pellentesque non magna. Suspendisse
-            maximus ipsum at placerat varius. In eget purus ac dolor molestie eleifend. Cras cursus orci at mi auctor, eu feugiat leo blandit. Integer vehicula non lectus ac mattis.
+            <h4>
+              Voorouders
+            </h4>
+            <p>
+              De Canis lupus, of de grijze wolf, is niet de eerste in zijn evolutie tak, maar zeker ook niet de laatste. Deze soort van de Canis familie leeft officieel sinds 1758, waar hij voor het eerst is gedocumenteerd door Carl Linnaeus in zijn boek Systema Naturae.
+              De grootvader van de Canis familie is de Canis lepophagus, deze soort leefde exclusief in een deel van Noord-Amerika zo’n 5 miljoen jaar geleden. De Canis lepophagus was erg klein toen der tijd, met een gewicht van ongeveer 18 kilo. Vergelijk
+              dit met de meer moderne hondachtige soorten die tot wel zo’n 80 kg kunnen wegen. Na de lepophagus kwam de Canis etruscus tot stand. Over deze soort is weinig bekend, omdat fragmenten van hun botten erg zeldzaam zijn. Ook bevatten de botten
+              vaak weinig genetisch materiaal.
+            </p>
+            <p>
+              Wat we wel weten is dat hij de voorouder is van de Canis mosbachensis. Deze soort had meerdere populaties in Noord-Amerika, Europa en Azië. Later stierf de Noord-Amerikaanse populatie uit.
+            </p>
+            </br>
+            <h4>
+            Evolutie
+          </h4>
+            <p>
+              Er is een duidelijke trend te zien, elke nieuwe wolvensoort uit de Canis familie is groter en sterker gaan groeien dan hun voorouders met een uitzondering op de hond - laten we zeggen dat dit het zwarte schaap is van de familie. Dit waren blijkbaar voordelige
+              eigenschappen in het verleden, waardoor de wolf uiteindelijk nu zo tot stand is gekomen.
+            </p>
+            </br>
+            <h4>
+            De wolf van nu
+          </h4>
+            <p>
+              De modernste vorm van de Canis familie naast de geliefde hondensoort wordt lupus genoemd. De mosbachensis, die zich de voorouder mag noemen van de lupus, ging vanuit Azië verder naar Noord-Amerika om daar de dominantste wolvensoort te worden. Helaas heeft
+              dit feest niet lang geduurd. In 1926 werden in de VS al de wolvenpopulaties gereduceerd tot kleine aantallen. In de VS stierf de laatste grijze wolf nog voor 1930 in Yellowstone. Pas in het jaar 1995 werd de wolf weer geherintroduceerd in
+              het Yellowstone National Park. Hedendaags heeft de lupus vooral in Canada, Rusland, Azië, delen in Oost-Europa en Duitsland grote populaties.
+            </p>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
         </div>
@@ -202,14 +220,102 @@
     </div>
   </div>
 
-  <div class="container page2">
+  <div class="container page3">
     <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height2">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height3">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Lorem Ipsum2</h1>
+            <h1>Bouw van de wolf</h1>
           </div>
           <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+            <p>
+              Heb je wel eens willen weten hoe hard een wolf kan bijten, hoe snel en hoe lang zo’n beest kan rennen, of hij zacht is, maar vooral hoe groot de wolf is? Dit gaan wij behandelen in het volgende onderwerp.
+            </p>
+            </br>
+            <h4>
+              De Grootte en het gewicht
+            </h4>
+            <p>
+              De grijze wolf weegt gemiddeld tussen de 40 en de 50 kilogram, maar het is niet vreemd als een wolf 60 kilogram wordt. De vrouwtjes zijn gemiddeld 20% kleiner dan de mannetjes. De mannetjes kunnen van staart tot neus ongeveer anderhalve meter tot en met
+              twee meter lang worden. De vrouwtjes worden van neus tot staart gemiddeld 1,40 meter tot en met 1,80 meter lang.
+            </p>
+            </br>
+            <h4>
+              De kaak en de beet
+            </h4>
+            <p>
+              De kaak van een wolf is wat ingewikkelder dan die van een mens, omdat de wolf 42 tanden in zijn bek heeft. Dit zijn 12 snijtanden, 4 hoektanden, 16 voorkiezen, 10 scheurkiezen en gewone kiezen. Het unieke aan een wolf is dat hij zijn prooi niet kauwt,
+              maar hem eerder aan stukken scheurt, zodat hij zijn prooi op gemakkelijk naar binnen kan werken. De druk die hij uitoefent tijdens het bijten, bedraagt maar liefst 15 MPa. Dit houdt in dat hij een elands poot kan doorbijten tot aan het beenmerg
+              toe.
+            </p>
+            </br>
+            <h4>
+              De vacht
+            </h4>
+            <p>
+              De vacht van de meeste wolven moet tegen lage temperaturen kunnen, daarom heeft de wolf een dichte wintervacht, inclusief een korte ondervacht en grof dekhaar. Het haar op de wolf is het langst rond de nek, vooral rond de schouder is bijzonder lang. Dit
+              vormt als ware een soort kam in de hals van de wolf. De kop is bedekt met lange haren die een bosje vormen. De oren zijn bedekt met redelijk korte haren.
+            </p>
+            <p>
+              Tijdens het voorjaar, wanneer de wolf deze deze dikke vacht niet nodig heeft, laat hij grotendeels zijn ondervacht en dekhaar vallen. De kleuren van de vacht bij wolven verschillen enorm, van bijna wit tot zwart, van grijs tot bruin en zelfs verschillende
+              tinten blond.
+            </p>
+            </br>
+            <h4>
+              De conditie en loopsnelheid
+            </h4>
+            <p>
+              Wolven draven in een stevig tempo van ongeveer 8 kilometer per uur. Hun topsnelheid ligt rond de 60 kilometer per uur. Dit komt van pas wanneer zij achtervolgingen met prooi hebben. Helaas kunnen zij dit niet voor lange afstanden volhouden. De lange afstands
+              conditie van de wolf daarentegen, is verbazingwekkend. Ze zijn instaat om 80 kilometer per dag af te leggen en kunnen uren lopen zonder moe te worden. Het is bekend dat wolven meerdere honderden kilometers weg van hun territorium hebben
+              gereisd op zoek naar een eigen roedel. Waarbij sommigen wel een afstand van zo’n 160 kilometer hebben afgelegd zonder enige rust.
+            </p>
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container page4">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height4">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Hoe oriënteert de wolf zich?</h1>
+          </div>
+          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+            <p>
+              In dit kopje behandelen we hoe geslepen de zintuigen van een wolf zijn, en in hoeverre de wolf superieur is tegenover de mens en vooral in welke opzichten. Om specifieker te zijn, hoe is het zicht, het reukvermogen en om niet te vergeten het gehoor van
+              de wolf.
+            </p>
+            <img src="vendor/images/page4wolf.png" style="height:auto;width:100%;margin-bottom:50px;margin-top:25px;" />
+            <h4>
+              Het zicht
+            </h4>
+            <p>
+              We beginnen met de ogen van de wolf en hoe goed die ontwikkeld zijn. Om te beginnen, zijn ze dat eigenlijk wel? In het ene opzicht wel. Daarmee bedoel ik dat zij veel beter in het donker kunnen zien dan wij mensen. Dat niet alleen, zij hebben een gezichtsveld
+              van 270°, terwijl de mens slechts een gezichtsveld heeft van ongeveer 180°. Dit helpt de wolf goed zijn omgeving in de gaten te houden. Daar bovenop komt dat wolven veel meer staafjes in hun ogen hebben dan wij mensen dat hebben. Staafjes
+              hebben als enige functie om licht op te vangen. Dit zorgt ervoor dat wolven heel goed beweging kunnen waarnemen. Toch heeft de wolf ook wat minpunten als we het hebben over zijn zicht. Wolven kunnen een stuk slechter diepte vanaf afstand
+              inschatten zoals wij dat kunnen. Daarnaast hebben de wolfjes een stuk minder kegeltjes in hun ogen. Deze kegeltjes kunnen kleuren detecteren. Dit zorgt ervoor dat wolven minder kleuren zien dan wij mensen. Deze twee dingen kunnen ervoor
+              zorgen dat wolven een stilstaand persoon over het hoofd zien, omdat ze het niet kunnen herkennen als een mogelijk levend wezen.
+            </p>
+            </br>
+            <h4>
+                Het reukvermogen
+              </h4>
+            <p>
+              Een wolf heeft een reukvermogen tot wel 10.000 keer dat van de mens. Onder goede omstandigheden kan de wolf van zo’n 2 kilometer of meer geuren oppikken met z’n neus. De wolf gebruikt zijn neus ook om er mee te communiceren.
+            </p>
+            </br>
+            <h4>
+                Het gehoor
+              </h4>
+            <p>
+              De oren van de wolf doen het weer een stuk beter dan bij mensen. Zij kunnen tonen tot 40.000 Hz horen! In vergelijking kan de mens op zijn best tot 20.000 Hz horen.
+            </p>
+            <p>
+              Dit verklaart ook waarom wij wolvenfluitjes niet kunnen horen, maar wolven wel. Deze fluitjes geven dus een toon af van boven de 20.000 Hz.
+            </p>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
         </div>
